<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="280dp"
        android:layout_height="335dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoTitulo">

        <RadioButton
            android:id="@+id/radioButtonVermelho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_vermelho" />

        <RadioButton
            android:id="@+id/radioButtonAmarelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_amarelo" />

        <RadioButton
            android:id="@+id/radioButtonAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_azul" />

        <RadioButton
            android:id="@+id/radioButtonLaranja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_laranja" />

        <RadioButton
            android:id="@+id/radioButtonRoxo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_roxo" />

        <RadioButton
            android:id="@+id/radioButtonVerde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_verde" />

        <RadioButton
            android:id="@+id/radioButtonRosa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_rosa" />
    </RadioGroup>

    <Button
        android:id="@+id/botaoGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_guardar"
        app:backgroundTint="#303F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.155" />

</androidx.constraintlayout.widget.ConstraintLayout>